--- a/src/biloljon.html
+++ b/src/biloljon.html
@@ -39,5 +39,82 @@
 
 </div>
 
+
+<main class="max-w-300 m-auto mt-10 lg:mt-30 lg:flex-row flex-col flex justify-between ">
+
+<div class="lg:w-150 ">
+    <h1 class="lg:text-[46px] text-[35px] font-black lg:text-start text-center text-[#1E212C] ">About the course</h1>
+    <p class="text-[16px] font-normal text-[#424551] lg:mt-7 mt-3">Bibendum vulputate adipiscing venenatis at est, a eu tincidunt. Leo aenean congue in sagittis, felis maecenas amet varius at. Pellentesque euismod in faucibus at elementum. Tellus maecenas libero est tempus sit cras at malesuada diam. Consequat senectus dictumst non hac dignissim montes, pretium, egestas molestie. Sed magna aliquet ornare nibh vel lectus diam eget pretium. Lorem risus nunc tincidunt tortor, mi nulla pellentesque</p>
+<h1 class="text-[28px] text-[#1E212C] font-bold lg:mt-15 mt-9 lg:text-start text-center ">You will learn:</h1>
+
+<div class="flex items-center gap-3 text-[16px] font-normal text-[#424551] mt-6 ">
+<img src="./Fhoto/check.png" alt="">
+<p>A fermentum in morbi pretium aliquam adipiscing donec tempus.</p>
+</div>
+<div class="flex items-center gap-3 text-[16px] font-normal text-[#424551] mt-2 ">
+<img src="./Fhoto/check.png" alt="">
+<p>Vulputate placerat amet pulvinar lorem nisl.</p>
+</div>
+<div class="flex items-center gap-3 text-[16px] font-normal text-[#424551] mt-2 ">
+<img src="./Fhoto/check.png" alt="">
+<p>Consequat feugiat habitant gravida quisque elit bibendum id adipiscing sed.</p>
+</div>
+<div class="flex items-center gap-3 text-[16px] font-normal text-[#424551] mt-2 ">
+<img src="./Fhoto/check.png" alt="">
+<p>Etiam duis lobortis in fames ultrices commodo nibh.</p>
+</div>
+<div class="flex items-center gap-3 text-[16px] font-normal text-[#424551] mt-2 ">
+<img src="./Fhoto/check.png" alt="">
+<p>Fringilla in nec risus congue venenatis pretium posuere nec.</p>
+</div>
+<div class="flex items-center gap-3 text-[16px] font-normal text-[#424551] mt-2 ">
+<img src="./Fhoto/check.png" alt="">
+<p>Cursus eu pretium, vulputate tempus quam massa sed at.</p>
+</div>
+</div>
+
+<div class="lg:w-124 bg-white border border-[#E5E8ED] lg:h-138 rounded-sm p-7 lg:mt-0 mt-10 shadow-2xl ">
+<p class="text-[20px] font-bold text-[#1E212C] ">DATES</p>
+<h1 class="text-[24px] font-bold text-[#FF3F3A] mt-1 ">Sept 7 – Nov 2</h1>
+<p class="text-[16px] font-normal text-[#787A80] mt-1">Metus turpis sit lorem lacus, in elit tellus lacus.</p>
+<p class="text-[20px] font-bold text-[#1E212C] mt-10 ">Duration</p>
+<h1 class="text-[24px] font-bold text-[#FF3F3A] mt-1 ">2 months – 8 lessons</h1>
+<p class="text-[16px] font-normal text-[#787A80] mt-1">Rhoncus pellentesque auctor auctor orci vulputate faucibus quis ut.</p>
+<p class="text-[20px] font-bold text-[#1E212C] mt-10 ">Price</p>
+<h1 class="text-[24px] font-bold text-[#FF3F3A] mt-1 ">$120 per month</h1>
+<p class="text-[16px] font-normal text-[#787A80] mt-1">Nulla sem adipiscing adipiscing felis fringilla. Adipiscing mauris quam ac elit tristique dis.</p>
+<button class="w-full h-11 bg-[#FF3F3A] mt-10 rounded-sm text-white text-[14px] font-bold ">Join the course</button>
+</div>
+</main>
+
+
+<main class="max-w-300 m-auto lg:mt-40 mt-15 lg:flex-row flex flex-col justify-between items-center ">
+<img src="./Fhoto/curator-image.png" alt="">
+
+<div class="lg:w-130 lg:mt-0 mt-10 ">
+    <h1 class="text-[16px] font-bold text-[#1E212C] ">Course curator</h1>
+    <h1 class="text-[46px] font-black text-[#1E212C] mt-1">Cody Fisher</h1>
+    <p class="text-[20px] text-[#787A80] font-normal mt-3">Senior UX designer in IT Product Company</p>
+<div class="flex items-center gap-2 mt-10 text-[16px] font-bold text-[#424551] ">
+<img src="./Fhoto/Star (1).png" alt="">
+<p>4.9 rate</p>
+</div>
+<div class="flex items-center gap-2 mt-2 text-[16px] font-bold text-[#424551] ">
+<img src="./Fhoto/Play.png" alt="">
+<p>4 courses</p>
+</div>
+<div class="flex items-center gap-2 mt-2 text-[16px] font-bold text-[#424551] ">
+<img src="./Fhoto/Profile1.png" alt="">
+<p>350 students</p>
+</div>
+
+<p class="mt-10 text-[16px] font-normal text-[#424551] ">Mattis adipiscing aliquam eu proin metus a iaculis faucibus. Tempus curabitur venenatis, vulputate venenatis fermentum ante. Nisl, amet id semper semper quis commodo, consequat. Massa rhoncus sit morbi odio. Sit maecenas nibh consectetur vel diam. Sem vulputate molestie laoreet at massa sed pharetra. Ac commodo platea id habitasse proin. Nullam sit nec ipsum posuere non. Nam vel aliquam tristique sollicitudin interdum  </p>
+
+<img class="mt-10" src="./Fhoto/socials.png" alt="">
+</div>
+
+</main>
+
+
 </body>
 </html>
