--- a/src/biloljon.html
+++ b/src/biloljon.html
@@ -116,5 +116,98 @@
 </main>
 
 
+<main class="max-w-300 m-auto lg:mt-30 mt-10 ">
+<p class="text-[20px] text-[#1E212C] text-center font-bold ">MAIN STEPS</p>
+<h1 class="text-[46px] text-[#1E212C] mt-2 font-black text-center ">Online learning process</h1>
+
+<div class="lg:flex-row flex flex-col mt-7  items-center justify-between ">
+
+<div class="w-73 ">
+    <div class="flex items-center gap-4">
+        <h1 class="text-[50px] font-extrabold text-[#D7DADD] ">01</h1>
+        <img src="./Fhoto/line.png" alt="">
+    </div>
+    <h1 class="text-[20px] font-bold text-[#1E212C] mt-3">Watching online video lectures</h1>
+    <p class="text-[16px] text-[#787A80] font-normal mt-2">Culpa nostrud commodo ea consequat aliquip reprehenderit. Veniam velit nostrud aliquip sunt.</p>
+</div>
+
+<div class="w-73 ">
+    <div class="flex items-center gap-4">
+        <h1 class="text-[50px] font-extrabold text-[#D7DADD] ">02</h1>
+        <img src="./Fhoto/line.png" alt="">
+    </div>
+    <h1 class="text-[20px] font-bold text-[#1E212C] mt-3">Passing test</h1>
+    <p class="text-[16px] text-[#787A80] font-normal mt-2">Anim reprehenderit sint voluptate exercitation adipisicing laborum adipisicing. Minim ad tempor est ea.</p>
+</div>
+<div class="w-73 ">
+    <div class="flex items-center gap-4">
+        <h1 class="text-[50px] font-extrabold text-[#D7DADD] ">03</h1>
+        <img src="./Fhoto/line.png" alt="">
+    </div>
+    <h1 class="text-[20px] font-bold text-[#1E212C] mt-3">Curator’s feedback</h1>
+    <p class="text-[16px] text-[#787A80] font-normal mt-2">Adipisicing esse aliqua aliquip qui amet. Aute eiusmod dolore dolore et ad et veniam ad deserunt.</p>
+</div>
+
+<div class="w-73 ">
+    <div class="flex items-center gap-5">
+        <h1 class="text-[50px] font-extrabold text-[#FF3F3A] tt1 ">04</h1>
+    </div>
+    <h1 class="text-[20px] font-bold text-[#1E212C] mt-3">Corrections if needed</h1>
+    <p class="text-[16px] text-[#787A80] font-normal mt-2">Sit veniam aute dolore adipisicing nulla sit culpa. Minim mollit voluptate ullamco proident ea ad.</p>
+</div>
+</div>
+</main>
+
+
+<main class="max-w-300 m-auto lg:mt-40 tt2 lg:h-61 rounded-sm p-10  ">
+
+<div class="flex items-center justify-between">
+<h1 class="text-[32px] text-[#1E212C] font-bold ">20% discount for early birds!</h1>
+
+<div class="lg:flex-row flex flex-col  items-center gap-6 ">
+
+<div class="flex flex-col items-center ">
+    <h1 class="text-[20px] font-bold text-[#1E212C] ">06</h1>
+    <p class="text-[12px] text-[#1E212C] ">Days</p>
+</div>
+
+<div class="flex flex-col items-center ">
+    <h1 class="text-[20px] font-bold text-[#1E212C] ">18</h1>
+    <p class="text-[12px] text-[#1E212C] ">Hours</p>
+</div>
+
+<div class="flex flex-col items-center ">
+    <h1 class="text-[20px] font-bold text-[#1E212C] ">24</h1>
+    <p class="text-[12px] text-[#1E212C] ">Mins</p>
+</div>
+<div class="flex flex-col items-center ">
+    <h1 class="text-[20px] font-bold text-[#1E212C] ">12</h1>
+    <p class="text-[12px] text-[#1E212C] ">Sec</p>
+</div>
+</div>
+</div>
+
+<div class="mt-10 lg:flex-row flex flex-col  items-end justify-between   ">
+
+<div class="w-73 ">
+<p class="text-[14px] text-[#424551] ">Full name</p>
+<input class="w-full h-11 bg-white mt-4 text-[#9A9CA5] rounded-sm text-[14px] font-normal " type="text" placeholder="Your full name">
+</div>
+
+<div class="w-73 ">
+<p class="text-[14px] text-[#424551] ">Email</p>
+<input class="w-full h-11 bg-white mt-4 text-[#9A9CA5] rounded-sm text-[14px] font-normal " type="email" placeholder="Your working email">
+</div>
+<div class="w-73 ">
+<p class="text-[14px] text-[#424551] ">Phone</p>
+<input class="w-full h-11 bg-white mt-4 text-[#9A9CA5] rounded-sm text-[14px] font-normal " type="tel" placeholder="Your phone number">
+</div>
+
+<button class="w-42 h-11 bg-[#FF3F3A] text-[14px] font-bold text-white rounded-sm lg:mt-0 mt-5">Join the course</button>
+
+</div>
+
+</main>
+
 </body>
 </html>
