--- a/src/biloljon.html
+++ b/src/biloljon.html
@@ -209,5 +209,94 @@
 
 </main>
 
+
+<main class="max-w-300 m-auto lg:mt-40 mt-10 lg:flex-row flex flex-col justify-between lg:items-start items-center  ">
+
+<div class="lg:w-124 ">
+<p class="text-[16px] font-bold text-[#1E212C] ">For whom?</p>
+<h1 class="text-[46px] font-bold text-[#1E212C] mt-3">Who will benefit from the course:</h1>
+</div>
+
+<div>
+    
+<div class="flex lg:items-center items-start lg:w-150 gap-3 text-[18px] font-bold text-[#424551] ">
+<img src="./Fhoto/check (1).png" alt="">
+<p>Specialists with more than 1 year of active work experience</p>
+</div>
+<div class="flex items-start lg:w-150 gap-3 text-[18px] font-bold text-[#424551] mt-8 ">
+<img src="./Fhoto/check (1).png" alt="">
+<p>Mobile app designers who want to improve their skills in solving business problems, creating and testing human-centered interfaces</p>
+</div>
+
+<div class="flex lg:items-center items-start lg:w-150 gap-3 text-[18px] font-bold text-[#424551] mt-8 ">
+<img src="./Fhoto/check (1).png" alt="">
+<p>Professional designers who want to feel more confident in UX</p>
+</div>
+<div class="flex items-start lg:w-150 gap-3 text-[18px] font-bold text-[#424551] mt-8 ">
+<img src="./Fhoto/check (1).png" alt="">
+<p>Specialists who would like to structure their knowledge, fill in the gaps</p>
+</div>
+
+</div>
+
+</main>
+
+
+
+<main class="max-w-300 m-auto lg:mt-60 mt-20 ">
+<p class="text-[20px] font-bold text-[#1E212C] ">Course program</p>
+<h1 class="font-black text-[#1E212C] text-[46px] mt-1">What will you learn</h1>
+
+<div class="mt-10 lg:flex-row flex flex-col items-center justify-between ">
+<div class="lg:w-160 ">
+<div class="flex items-start gap-5 ">
+<img src="./Fhoto/minus.png" alt="">
+    <div>
+        <p class="text-[20px] font-normal text-[#FF3F3A] -mt-4 ">Lesson 1. <span class="font-bold text-[#1E212C]">Aliquet lectus urna viverra in odio.</span></p>
+
+        <p class="text-[16px] font-normal text-[#424551] mt-5">Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec enim, ornare. Lacus facilisi curabitur turpis varius mauris. Nisi, tempus risus, odio mi suscipit sed. Curabitur faucibus porttitor quis sem lacus, arcu feugiat facilisis. Commodo nunc orci vitae accumsan id.</p>
+    </div>
+</div>
+
+<div class="flex items-center gap-5 mt-5">
+<img src="./Fhoto/Plus.png" alt="">
+ <p class="text-[20px] font-normal text-[#FF3F3A]  ">Lesson 2. <span class="font-bold text-[#1E212C]">Orci commodo, viverra orci mollis ut euismod.</span></p>
+</div>
+
+<div class="flex items-center gap-5 mt-5">
+<img src="./Fhoto/Plus.png" alt="">
+ <p class="text-[20px] font-normal text-[#FF3F3A]  ">Lesson 3. <span class="font-bold text-[#1E212C]">Sagittis vitae facilisi rutrum amet mauris quisque vel.</span></p>
+</div>
+<div class="flex items-center gap-5 mt-5">
+<img src="./Fhoto/Plus.png" alt="">
+ <p class="text-[20px] font-normal text-[#FF3F3A]  ">Lesson 4. <span class="font-bold text-[#1E212C]">In id dolor quis nunc, urna hendrerit pharetra.</span></p>
+</div>
+<div class="flex items-center gap-5 mt-5">
+<img src="./Fhoto/Plus.png" alt="">
+ <p class="text-[20px] font-normal text-[#FF3F3A]  ">Lesson 5. <span class="font-bold text-[#1E212C]">Est, ut tempus id rutrum facilisi.</span></p>
+</div>
+<div class="flex items-center gap-5 mt-5">
+<img src="./Fhoto/Plus.png" alt="">
+ <p class="text-[20px] font-normal text-[#FF3F3A]  ">Lesson 6. <span class="font-bold text-[#1E212C]">Amet nec in pellentesque.</span></p>
+</div>
+<div class="flex items-center gap-5 mt-5">
+<img src="./Fhoto/Plus.png" alt="">
+ <p class="text-[20px] font-normal text-[#FF3F3A]  ">Lesson 7. <span class="font-bold text-[#1E212C]">Massa vel arcu mauris, id vel rhoncus mattis quis.</span></p>
+</div>
+<div class="flex items-center gap-5 mt-5">
+<img src="./Fhoto/Plus.png" alt="">
+ <p class="text-[20px] font-normal text-[#FF3F3A]  ">Lesson 8. <span class="font-bold text-[#1E212C]">Neque, cursus sapien nullam id.</span></p>
+</div>
+
+</div>
+
+
+<img src="./Fhoto/illustration (1).png" alt="">
+</div>
+
+
+</main>
+
+
 </body>
 </html>
