--- a/src/biloljon.html
+++ b/src/biloljon.html
@@ -298,5 +298,62 @@
 </main>
 
 
+<main class="w-full bg-[#F4F5F6] ">
+
+<div class="max-w-300 m-auto lg:pt-30  pt-10">
+<p class="text-[16px] font-bold text-center text-[#1E212C] ">TESTIMONIALS</p>
+<h1 class="text-[46px] font-black text-[#1E212C] text-center mt-1">What our students say</h1>
+
+<div class="lg:w-250 lg:h-87 bg-white flex items-center justify-center mt-20 m-auto rounded-sm  ">
+
+    <div class="lg:w-200 flex items-start gap-5 ">
+<img src="./Fhoto/braces.png" alt="">
+<div>
+<p class="text-[20px] font-normal text-[#424551] "> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo, amet lectus quam viverra mus lobortis fermentum amet, eu. Pulvinar eu sed purus facilisi. Vitae id turpis tempus ornare turpis quis non. Congue tortor in euismod vulputate etiam eros. Pulvinar neque pharetra arcu diam maecenas diam integer in.</p>
+
+<div class="flex items-center gap-4 mt-8 ">
+<img src="./Fhoto/image (48).png" alt="">
+<div>
+    <h1 class="text-[16px] font-bold text-[#1E212C] ">Eleanor Pena</h1>
+    <p class="text-[14px] font-normal text-[#787A80] ">Position, Course</p>
+</div>
+</div>
+
+</div>
+    </div>
+
+</div>
+
+<img class="lg:mt-15 mt-10 m-auto" src="./Fhoto/dots.png" alt="">
+
+
+<div class="lg:pt-45 pt-10 lg:flex-row flex flex-col items-center justify-between  ">
+<img src="./Fhoto/illustration (2).png" alt="">
+
+<div class="lg:w-133 ">
+<p class="text-[16px] text-[#1E212C] font-bold ">Leave a request now and get 20% off!</p>
+<h1 class="text-[46px] font-black text-[#1E212C]  tracking-[0%]">Register for the course</h1>
+
+<p class="text-[16px] font-normal text-[#424551] mt-10">Full Name</p>
+<input class="w-full h-13 bg-white border border-[#D7DADD] mt-1.5 text-[#9A9CA5] " type="text" placeholder="Your full name">
+
+<p class="text-[16px] font-normal text-[#424551] mt-10">Email</p>
+<input class="w-full h-13 bg-white border border-[#D7DADD] mt-1.5 text-[#9A9CA5] " type="text" placeholder="Your working email">
+
+<p class="text-[16px] font-normal text-[#424551] mt-10">Phone</p>
+<input class="w-full h-13 bg-white border border-[#D7DADD] mt-1.5 text-[#9A9CA5] " type="text" placeholder="Your phone number">
+
+<button class="w-full h-13 bg-[#FF3F3A] rounded-sm text-[16px] text-white font-bold mt-10">Join the course</button>
+
+</div>
+
+</div>
+
+
+</div>
+
+</main>
+
+
 </body>
 </html>
