--- a/src/biloljon.html
+++ b/src/biloljon.html
@@ -298,7 +298,7 @@
 </main>
 
 
-<main class="w-full bg-[#F4F5F6] ">
+<main class="w-full bg-[#F4F5F6] lg:h-400 ">
 
 <div class="max-w-300 m-auto lg:pt-30  pt-10">
 <p class="text-[16px] font-bold text-center text-[#1E212C] ">TESTIMONIALS</p>
@@ -353,6 +353,65 @@
 </div>
 
 </main>
+
+
+
+
+<main class="max-w-300 m-auto lg:mt-40 mt-15 ">
+<p class="text-[20px] text-[#1E212C] font-bold ">Check other courses</p>
+<h1 class="text-[46px] text-[#1E212C] font-black mt-1">You may also like</h1>
+
+<div class="mt-15  lg:flex-row flex flex-col items-center justify-between ">
+
+    <div class="lg:w-147 bg-white border-2 border-[#E5E8ED] shadow-2xl shadow-[#03CEA4] lg:flex-row flex-col flex lg:h-54 justify-between ">
+<img class="w-53 h-54" src="./Fhoto/image.png" alt="">
+
+<div class="flex items-center justify-center lg:w-93">
+
+    <div class="lg:w-81 lg:h-38 ">
+        <button class="w-20 h-6 bg-[#03CEA4] rounded-sm text-[14px] font-normal text-white  ">Marketing</button>
+        <h1 class="text-[20px] font-bold text-[#1E212C] mt-5">The Ultimate Google Ads Training Course</h1>
+        <div class="flex items-center gap-3  mt-5">
+            <p class="text-[18px] text-[#FF4242] font-bold ">$100</p>
+            <p class="text-[18px] font-normal text-[#787A80] ">|</p>
+            <p class="text-[18px] font-normal text-[#787A80] ">by Jerome Bell</p>
+        </div> 
+    </div>
+</div>
+
+    </div>
+
+ <div class="lg:w-147 bg-white border-2 border-[#E5E8ED] shadow-2xl shadow-[#5A87FC] lg:flex-row flex-col flex lg:h-54 justify-between ">
+<img class="w-53 h-54" src="./Fhoto/image (2).png" alt="">
+
+<div class="flex items-center justify-center lg:w-93">
+
+    <div class="lg:w-81 lg:h-38 ">
+        <button class="w-24  h-6 bg-[#5A87FC] rounded-sm text-[14px] font-normal text-white  ">Management</button>
+        <h1 class="text-[20px] font-bold text-[#1E212C] mt-5">Prduct Management Fundamentals</h1>
+        <div class="flex items-center gap-3  mt-5">
+            <p class="text-[18px] text-[#FF4242] font-bold ">$100</p>
+            <p class="text-[18px] font-normal text-[#787A80] ">|</p>
+            <p class="text-[18px] font-normal text-[#787A80] ">by Marvin McKinney</p>
+        </div> 
+    </div>
+</div>
+
+    </div>
+
+
+    
+</div>
+
+<div class="lg:mt-40  mt-10 lg:flex-row flex flex-col gap-5 m-auto  lg:w-146  ">
+<h1 class="text-[28px] font-bold text-[#1E212C] ">Do you want more courses?</h1>
+<button class="text-[16px] text-white font-bold w-50 h-13 bg-[#FF3F3A] rounded-sm ">View all courses</button>
+</div>
+</main>
+
+
+
+
 
 
 </body>
