--- a/src/biloljon.html
+++ b/src/biloljon.html
@@ -403,15 +403,78 @@
     
 </div>
 
-<div class="lg:mt-40  mt-10 lg:flex-row flex flex-col gap-5 m-auto  lg:w-146  ">
+<div class="lg:mt-30  mt-10 lg:flex-row flex flex-col gap-5 m-auto  lg:w-146  ">
 <h1 class="text-[28px] font-bold text-[#1E212C] ">Do you want more courses?</h1>
 <button class="text-[16px] text-white font-bold w-50 h-13 bg-[#FF3F3A] rounded-sm ">View all courses</button>
 </div>
 </main>
 
 
+<footer class="w-full bg-[#1E212C] lg:h-80 lg:mt-50 mt-10">
+    
+<div class="max-w-300 m-auto pt-20 lg:flex-row flex flex-col justify-between items-start ">
+<div class="lg:w-70 ">
+<img src="./Fhoto/logo (11).png" alt="">
+<p class="text-[12px] font-normal text-white mt-4">Createx Online School is a leader in online studying. We have lots of courses and programs from the main market experts. We provide relevant approaches to online learning, internships and employment in the largest companies in the country. </p>
+<img class="mt-8" src="./Fhoto/socials (1).png" alt="">
+</div>
+
+<div class="lg:w-20 lg:mt-0 mt-5 ">
+<h1 class="text-[16px] text-white font-bold ">SITE MAP</h1>
+<p class="text-[16px] font-normal text-white mt-4">About Us</p>
+<p class="text-[16px] font-normal text-white mt-2">Courses</p>
+<p class="text-[16px] font-normal text-white mt-2">Events</p>
+<p class="text-[16px] font-normal text-white mt-2">Blog</p>
+<p class="text-[16px] font-normal text-white mt-2">Contacts</p>
+</div>
 
 
+<div class="lg:w-29 lg:mt-0 mt-5 ">
+<h1 class="text-[16px] text-white font-bold ">COURSES</h1>
+<p class="text-[16px] font-normal text-white mt-4">Marketing</p>
+<p class="text-[16px] font-normal text-white mt-2">Management</p>
+<p class="text-[16px] font-normal text-white mt-2">HR & Recruting</p>
+<p class="text-[16px] font-normal text-white mt-2">Design</p>
+<p class="text-[16px] font-normal text-white mt-2">Development</p>
+</div>
+
+<div class="lg:w-40 lg:mt-0 mt-5  ">
+<h1 class="text-[16px] text-white font-bold ">CONTACT US</h1>
+<div class="flex items-center gap-2 mt-4 text-[16px] font-normal text-white">
+<img src="./Fhoto/iPhone.png" alt="">
+<p>(405) 555-0128</p>
+</div>
+
+<div class="flex items-center gap-2 mt-4 text-[16px] font-normal text-white">
+<img src="./Fhoto/Mail (1).png" alt="">
+<p>hello@createx.com</p>
+</div>
+</div>
+
+<div class="lg:w-71 lg:mt-0 mt-5 ">
+<h1 class="text-[16px] text-white font-bold ">SIGN UP TO OUR NEWSLETTER</h1>
+<input class="w-full h-9 bg-[#FFFFFF1F] border border-[#FFFFFF33] mt-6 text-[12px] text-white  " type="text" placeholder="Email address">
+<p class="text-[10px]  font-normal text-white mt-4">*Subscribe to our newsletter to receive communications and early updates from Createx SEO Agency.</p>
+</div>
+
+
+</div>
+
+
+</footer>
+
+<footer class="w-full bg-[#292C37] lg:h-15   ">
+<div class="max-w-300 m-auto pt-6 flex items-center justify-between ">
+    <div class="flex items-center gap-1">
+<p class="text-[12px] text-white font-normal ">© All rights reserved.</p>
+<p class="text-[12px] text-white font-normal ">Made with</p>
+<img src="./Fhoto/Heart.png" alt="">
+<p class="text-[12px] text-white font-normal ">by Createx Studio </p>
+    </div>
+<p class="text-white text-[14px] font-bold ">GO TO TOP</p>
+
+</div>
+</footer>
 
 
 </body>
