footer by bakhtiyor

--- a/src/bakhtiyor.html
+++ b/src/bakhtiyor.html
@@ -217,6 +217,62 @@
             </section>
         </section>
     </main>
+     <footer class="w-full bg-[#1E212C] pb-15">
+
+        <section class="max-w-300 w-[90%] m-auto pt-20 flex-wrap flex  justify-between items-start ">
+            <div class="lg:w-70 ">
+                <img src="./bakhtiyor/logo (11).png" alt="">
+                <p class="text-[12px] font-normal text-white mt-4">Createx Online School is a leader in online studying.
+                    We have lots of courses and programs from the main market experts. We provide relevant approaches
+                    to online learning, internships and employment in the largest companies in the country. </p>
+                <img class="mt-8" src="./bakhtiyor/socials.png" alt="">
+            </div>
+
+            <div class="lg:w-20 lg:mt-0 mt-5 ">
+                <h1 class="text-[16px] text-white font-bold ">SITE MAP</h1>
+                <p class="text-[16px] font-normal text-white mt-4">About Us</p>
+                <p class="text-[16px] font-normal text-white mt-2">Courses</p>
+                <p class="text-[16px] font-normal text-white mt-2">Events</p>
+                <p class="text-[16px] font-normal text-white mt-2">Blog</p>
+                <p class="text-[16px] font-normal text-white mt-2">Contacts</p>
+            </div>
+
+
+            <div class="lg:w-29 lg:mt-0 mt-5 ">
+                <h1 class="text-[16px] text-white font-bold ">COURSES</h1>
+                <p class="text-[16px] font-normal text-white mt-4">Marketing</p>
+                <p class="text-[16px] font-normal text-white mt-2">Management</p>
+                <p class="text-[16px] font-normal text-white mt-2">HR & Recruting</p>
+                <p class="text-[16px] font-normal text-white mt-2">Design</p>
+                <p class="text-[16px] font-normal text-white mt-2">Development</p>
+            </div>
+
+            <div class="lg:w-40 lg:mt-0 mt-5  ">
+                <h1 class="text-[16px] text-white font-bold ">CONTACT US</h1>
+                <div class="flex items-center gap-2 mt-4 text-[16px] font-normal text-white">
+                    <img src="./Fhoto/iPhone.png" alt="">
+                    <p>(405) 555-0128</p>
+                </div>
+
+                <div class="flex items-center gap-2 mt-4 text-[16px] font-normal text-white">
+                    <img src="./Fhoto/Mail (1).png" alt="">
+                    <p>hello@createx.com</p>
+                </div>
+            </div>
+
+            <div class="lg:w-71 lg:mt-0 mt-5 ">
+                <h1 class="text-[16px] text-white font-bold ">SIGN UP TO OUR NEWSLETTER</h1>
+                <input class="w-full h-9 bg-[#FFFFFF1F] border border-[#FFFFFF33] mt-6 text-[12px] text-white  "
+                    type="text" placeholder="Email address">
+                <p class="text-[10px]  font-normal text-white mt-4">*Subscribe to our newsletter to receive
+                    communications and early updates from Createx SEO Agency.</p>
+            </div>
+
+
+        </section>
+
+
+    </footer>
 </body>
 
 </html>
