branch xurshed section ay Our core values to Our students work here

--- a/src/xurshed.html
+++ b/src/xurshed.html
@@ -54,6 +54,200 @@
             </div>
         </section>
     </header>
+
+    <main class="max-w-300 m-auto">
+        <section class="md:py-20">
+            <p class="text-center font-semibold text-[19px]">We always stand for</p>
+            <h1 class="text-center font-bold text-[45px]">Our core values</h1>
+            <div class="flex justify-between py-10 flex-wrap gap-10 md:gap-0">
+                <div class="md:w-75 xbrl flex flex-col text-center gap-3 items-center justify-center px-7">
+                    <img src="./img_xurshed/ic-structure.png" alt="">
+                    <h3 class="font-bold text-[18px]">Structured Approach</h3>
+                    <p class="text-[gray]">Aenean urna dictum adipiscing nec, cras quisque. Nunc in mauris. </p>
+                </div>
+                <div class="md:w-75 xbrl flex flex-col text-center gap-3 items-center justify-center px-7">
+                    <img src="./img_xurshed/ic-chat.png" alt="">
+                    <h3 class="font-bold text-[18px]">Professional Feedbacks</h3>
+                    <p class="text-[gray]">Aenean urna dictum adipiscing nec, cras quisque. Nunc in mauris. </p>
+                </div>
+                <div class="md:w-75 xbrl flex flex-col text-center gap-3 items-center justify-center px-7">
+                    <img src="./img_xurshed/ic-target.png" alt="">
+                    <h3 class="font-bold text-[18px]">Efficiency</h3>
+                    <p class="text-[gray]">Aenean urna dictum adipiscing nec, cras quisque. Nunc in mauris. </p>
+                </div>
+                <div class="md:w-75 flex flex-col text-center gap-3 items-center justify-center px-7">
+                    <img src="./img_xurshed/ic-calendar.png" alt="">
+                    <h3 class="font-bold text-[18px]">Flexible Shedule</h3>
+                    <p class="text-[gray]">Aenean urna dictum adipiscing nec, cras quisque. Nunc in mauris. </p>
+                </div>
+            </div>
+        </section>
+
+        <section class="py-15 p-1.5">
+            <p class="text-center font-semibold text-[19px]">our main directions</p>
+            <h1 class="text-center font-bold text-[45px]">What do we teach</h1>
+            <div class="flex flex-wrap justify-center gap-5 md:py-15">
+                <div class="md:w-95 d2x rounded-[5px]">
+                    <img class="w-full" src="./img_xurshed/image (21).png" alt="">
+                    <div class="flex flex-col gap-3.5 items-start p-4">
+                        <button class="bg-[#5A87FC] px-3 py-1 text-white rounded-[5px]">Marketing</button>
+                        <p class="text-[gray]">Odio posuere netus quisque faucibus lectus arcu donec. Eget dictum eu viverra faucibus. Viverra scelerisque consequat.</p>
+                        <p class="flex items-center gap-2 font-bold">Check courses <img src="./img_xurshed/Right.png" alt=""></p>
+                    </div>
+                </div>
+                <div class="md:w-95 d2x rounded-[5px]">
+                    <img class="w-full" src="./img_xurshed/image (22).png" alt="">
+                    <div class="flex flex-col gap-3.5 items-start p-4">
+                        <button class="bg-[#F89828] px-3 py-1 text-white rounded-[5px]">HR & Recruting</button>
+                        <p class="text-[gray]">Odio posuere netus quisque faucibus lectus arcu donec. Eget dictum eu viverra faucibus. Viverra scelerisque consequat.</p>
+                        <p class="flex items-center gap-2 font-bold">Check courses <img src="./img_xurshed/Right.png" alt=""></p>
+                    </div>
+                </div>
+                <div class="md:w-95 d2x rounded-[5px]">
+                    <img class="w-full" src="./img_xurshed/image (23).png" alt="">
+                    <div class="flex flex-col gap-3.5 items-start p-4">
+                        <button class="bg-[#F52F6E] px-3 py-1 text-white rounded-[5px]">Marketing</button>
+                        <p class="text-[gray]">Odio posuere netus quisque faucibus lectus arcu donec. Eget dictum eu viverra faucibus. Viverra scelerisque consequat.</p>
+                        <p class="flex items-center gap-2 font-bold">Check courses <img src="./img_xurshed/Right.png" alt=""></p>
+                    </div>
+                </div>
+                <div class="md:w-95 d2x rounded-[5px] shadow-md">
+                    <img class="w-full" src="./img_xurshed/image (24).png" alt="">
+                    <div class="flex flex-col gap-3.5 items-start p-4">
+                        <button class="bg-[#7772F1] px-3 py-1 text-white rounded-[5px]">Marketing</button>
+                        <p class="text-[gray]">Odio posuere netus quisque faucibus lectus arcu donec. Eget dictum eu viverra faucibus. Viverra scelerisque consequat.</p>
+                        <p class="flex items-center gap-2 font-bold">Check courses <img src="./img_xurshed/Right.png" alt=""></p>
+                    </div>
+                </div>
+                <div class="md:w-95 d2x rounded-[5px]">
+                    <img class="w-full" src="./img_xurshed/image (25).png" alt="">
+                    <div class="flex flex-col gap-3.5 items-start p-4">
+                        <button class="bg-[#03CEA4] px-3 py-1 text-white rounded-[5px]">Marketing</button>
+                        <p class="text-[gray]">Odio posuere netus quisque faucibus lectus arcu donec. Eget dictum eu viverra faucibus. Viverra scelerisque consequat.</p>
+                        <p class="flex items-center gap-2 font-bold">Check courses <img src="./img_xurshed/Right.png" alt=""></p>
+                    </div>
+                </div>
+                <div class="md:w-95 d2x rounded-[5px]">
+                    <img class="w-full" src="./img_xurshed/comming-soon.png" alt="">
+
+                </div>
+            </div>
+        </section>
+
+        <section class="flex items-center justify-between md:py-20 flex-col md:flex-row gap-15 md:gap-0 p-1.5">
+            <div class="md:w-135">
+                <div>
+                    <p class="font-semibold text-[20px]">Studying process</p>
+                    <h1 class="font-bold text-[40px]">That’s how we do it</h1>
+                </div>
+                <div class="mt-15 flex gap-7">
+                    <img src="img_xurshed/line.png" alt="">
+                    <div class="flex flex-col gap-10">
+                        <div>
+                            <p class="text-[gray] font-semibold">STEP 1</p>
+                            <h3 class="font-bold text-[19px]">Watching online video lectures</h3>
+                            <p class="text-[gray] pt-3">Aliquam turpis viverra quam sit interdum blandit posuere pellentesque. Nisl, imperdiet gravida massa neque.</p>
+                        </div>
+                        <div>
+                            <p class="text-[gray] font-semibold">STEP 2</p>
+                            <h3 class="font-bold text-[19px]">Passing test</h3>
+                            <p class="text-[gray] pt-3">Aliquam turpis viverra quam sit interdum blandit posuere pellentesque. Nisl, imperdiet gravida massa neque.</p>
+                        </div>
+                        <div>
+                            <p class="text-[gray] font-semibold">STEP 3</p>
+                            <h3 class="font-bold text-[19px]">Curator’s feedback</h3>
+                            <p class="text-[gray] pt-3">Aliquam turpis viverra quam sit interdum blandit posuere pellentesque. Nisl, imperdiet gravida massa neque.</p>
+                        </div>
+                        <div>
+                            <p class="text-[gray] font-semibold">STEP 4</p>
+                            <h3 class="font-bold text-[19px]">Corrections if needed</h3>
+                            <p class="text-[gray] pt-3">Aliquam turpis viverra quam sit interdum blandit posuere pellentesque. Nisl, imperdiet gravida massa neque.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <img src="./img_xurshed/illustration (1).png" alt="">
+        </section>
+
+        <section class="md:py-20 py-15">
+            <p class="text-center font-semibold text-[19px]">our main directions</p>
+            <h1 class="text-center font-bold text-[45px]">Meet our team</h1>
+            <div class="flex flex-wrap justify-center gap-5 py-10">
+                <div class="md:w-70">
+                    <img src="./img_xurshed/hover.png" alt="">
+                </div>
+                <div class="flex flex-col items-center">
+                    <div class="md:w-70 bg-[#FFCF2D] p-2 flex items-end justify-center">
+                        <img src="./img_xurshed/image.png" alt="">
+                    </div>
+                    <p class="pt-3 font-bold text-[18px]"> Jerome Bell</p>
+                    <p class="text-[gray]">Founder and Program Director</p>
+                </div>
+                <div class="flex flex-col items-center">
+                    <div class="md:w-70 bg-[#FFCF2D] p-2 flex items-end justify-center">
+                        <img src="./img_xurshed/image.1.png" alt="">
+                    </div>
+                    <p class="pt-3 font-bold text-[18px]">Kristin Watson</p>
+                    <p class="text-[gray]">Founder and Program Director</p>
+                </div>
+                <div class="flex flex-col items-center">
+                    <div class="md:w-70 bg-[#FFCF2D] p-2 flex items-end justify-center">
+                        <img src="./img_xurshed/image.2.png" alt="">
+                    </div>
+                    <p class="pt-3 font-bold text-[18px]"> Marvin McKinney</p>
+                    <p class="text-[gray]">Founder and Program Director</p>
+                </div>
+                <div class="flex flex-col items-center">
+                    <div class="md:w-70 bg-[#FFCF2D] p-2 flex items-end justify-center">
+                        <img src="./img_xurshed/image.3.png" alt="">
+                    </div>
+                    <p class="pt-3 font-bold text-[18px]">Leslie Alexander Li</p>
+                    <p class="text-[gray]">Founder and Program Director</p>
+                </div>
+                <div class="flex flex-col items-center">
+                    <div class="md:w-70 bg-[#FFCF2D] p-2 flex items-end justify-center">
+                        <img src="./img_xurshed/image.4.png" alt="">
+                    </div>
+                    <p class="pt-3 font-bold text-[18px]">Kathryn Murphy</p>
+                    <p class="text-[gray]">Founder and Program Director</p>
+                </div>
+                <div class="flex flex-col items-center">
+                    <div class="md:w-70 bg-[#FFCF2D] p-2 flex items-end justify-center">
+                        <img src="./img_xurshed/image5.png" alt="">
+                    </div>
+                    <p class="pt-3 font-bold text-[18px]">Brooklyn Simmons</p>
+                    <p class="text-[gray]">Founder and Program Director</p>
+                </div>
+                <div class="flex flex-col items-center">
+                    <div class="md:w-70 bg-[#FFCF2D] p-2 flex items-end justify-center">
+                        <img src="./img_xurshed/image.6.png" alt="">
+                    </div>
+                    <p class="pt-3 font-bold text-[18px]">Cody Fisher</p>
+                    <p class="text-[gray]">What our students say</p>
+                </div>
+            </div>
+        </section>
+    </main>
+    <section class="width-[100%] bg-[#F4F5F6] py-20">
+        <div class="max-w-300 m-auto p-1.5">
+            <p class="text-center font-semibold text-[19px]">TESTIMONIALS</p>
+            <h1 class="text-center font-bold text-[45px]">Meet our team</h1>
+            <div class="bg-white md:w-200 m-auto md:px-25 px-8 py-10 mt-10">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo, amet lectus quam viverra mus lobortis fermentum amet, eu. Pulvinar eu sed purus facilisi. Vitae id turpis tempus ornare turpis quis non. Congue tortor in euismod vulputate
+                    etiam eros. Pulvinar neque pharetra arcu diam maecenas diam integer in.</p>
+                <div class="mt-8 flex items-center gap-4">
+                    <img src="./img_xurshed/image (26).png" alt="">
+                    <div>
+                        <h4 class="font-bold text-[18px]">Eleanor Pena</h4>
+                        <p class="text-[gray]">Position, Course</p>
+                    </div>
+                </div>
+            </div>
+            <p class="text-center font-semibold text-[19px] md:pt-35 pt-10">best jobs for you</p>
+            <h1 class="text-center font-bold text-[45px]">Our students work here</h1>
+            <img class="pt-10" src="./img_xurshed/logos.png" alt="">
+        </div>
+    </section>
 </body>
 
 </html>
