branch xurshed footer

--- a/src/xurshed.html
+++ b/src/xurshed.html
@@ -248,6 +248,75 @@
             <img class="pt-10" src="./img_xurshed/logos.png" alt="">
         </div>
     </section>
+
+
+    <footer>
+        <section class="max-w-300 m-auto md:py-35 py-15 p-1.5">
+            <div class="flex justify-between items-center">
+                <div>
+                    <p class="font-semibold">Our blog</p>
+                    <p class="font-bold text-[40px]">Latest posts</p>
+                </div>
+                <button class="bg-[#FF3F3A] px-7 py-2.5 text-white">Go to blog</button>
+            </div>
+            <div class="flex justify-between mt-10 flex-col md:flex-row gap-10 md:gap-0">
+                <div class="md:w-95">
+                    <img src="./img_xurshed/image_1.png" alt="">
+                    <h3 class="font-bold text-[18px] pt-3">What is traffic arbitrage and does it really make money?</h3>
+                    <p class="text-[gray] pt-2">Pharetra, ullamcorper iaculis viverra parturient sed id sed. Convallis proin dignissim lacus, purus gravida...</p>
+                    <p class="font-semibold flex items-center gap-2 pt-3">Listen <img src="./img_xurshed/Right.png" alt=""></p>
+                </div>
+                <div class="md:w-95">
+                    <img src="./img_xurshed/image_2.png" alt="">
+                    <h3 class="font-bold text-[18px] pt-3">What to do and who to talk to if you want to get feedback on the product</h3>
+                    <p class="text-[gray] pt-2">Pharetra, ullamcorper iaculis viverra parturient sed id sed. Convallis proin dignissim lacus, purus gravida...</p>
+                    <p class="font-semibold flex items-center gap-2 pt-3">Listen <img src="./img_xurshed/Right.png" alt=""></p>
+                </div>
+                <div class="md:w-95">
+                    <img src="./img_xurshed/image_3.png" alt="">
+                    <h3 class="font-bold text-[18px] pt-3">Should you choose a creative profession if you are attracted to creativity?</h3>
+                    <p class="text-[gray] pt-2">Pharetra, ullamcorper iaculis viverra parturient sed id sed. Convallis proin dignissim lacus, purus gravida...</p>
+                    <p class="font-semibold flex items-center gap-2 pt-3">Listen <img src="./img_xurshed/Right.png" alt=""></p>
+                </div>
+            </div>
+        </section>
+
+        <section class="width-[100%] bg-[#e2664468] py-30">
+            <div class="max-w-300 m-auto flex flex-col items-center gap-7">
+                <div>
+                    <p class="text-center font-semibold text-[19px]">TESTIMONIALS</p>
+                    <h1 class="text-center font-bold text-[45px] md:w-180">Subscribe to the Createx School announcements</h1>
+                </div>
+                <div class="flex items-center gap-5">
+                    <input class="bg-white md:w-85 px-5 py-2.5" type="text" placeholder="Your working email">
+                    <button class="bg-[#FF3F3A] px-7 py-2.5 text-white">Subscribe</button>
+                </div>
+            </div>
+        </section>
+
+        <div class="width-[100%] bg-[#1E212C] py-10 text-[gray]">
+            <div class="max-w-300 m-auto flex justify-between flex-col md:flex-row p-1.5 gap-15 md:gap-0">
+                <div class="md:w-90 flex flex-col gap-7 items-start">
+                    <img src="./img_xurshed/logo (3).png" alt="">
+                    <p>Createx Online School is a leader in online studying. We have lots of courses and programs from the main market experts. We provide relevant approaches to online learning, internships and employment in the largest companies in the
+                        country. </p>
+                    <img src="./img_xurshed/socials.png" alt="">
+                </div>
+                <div>
+                    <img src="./img_xurshed/site-map.png" alt="">
+                </div>
+                <div>
+                    <img src="./img_xurshed/courses.png" alt="">
+                </div>
+                <div>
+                    <img src="./img_xurshed/contacts.png" alt="">
+                </div>
+                <div>
+                    <img src="./img_xurshed/sign-up.png" alt="">
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
